namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: example
  labels:
    environment: dev
    #owner: team-a
