pod.yaml
apiVersion: v1 #service-v1, replicaset/Deployment-apps/v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    app: myapp
    type: front-end
spec:
  containers:
    - name: nginx-app-cont
      image: nginx
