microapp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  #annotations:
  #kubernetes.io/ingress.class: nginx
  #nginx.ingress.kubernetes.io/rewrite-target: /
  name: myingressfile
spec:
  ingressClassName: nginx
  rules:
  - host: lakshmimicroapp.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: micro1-svc
            port:
              number: 80
      - path: /micro2
        pathType: Prefix
        backend:
          service:
            name: micro2-svc
            port:
              number: 80
      - path: /micro3
        pathType: Prefix
        backend:
          service:
            name: micro3-svc
            port:
              number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-micro1
  # namespace: myapp
  labels:
    app: micro1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: micro1
  template:
    metadata:
      labels:
        app: micro1
    spec:
      containers:
      - name: container-micro1
        image: srikanta1219/micro1:latest
        ports:
        - containerPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-micro2
  # namespace: myapp
  labels:
    app: micro2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: micro2
  template:
    metadata:
      labels:
        app: micro2
    spec:
      containers:
      - name: container-micro2
        image: srikanta1219/micro2:latest
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-micro3
  # namespace: myapp
  labels:
    app: micro3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: micro3
  template:
    metadata:
      labels:
        app: micro3
    spec:
      containers:
      - name: container-micro3
        image: srikanta1219/micro3:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: micro1-svc
  #  namespace: myapp
  labels:
    app: micro1
spec:
  #type: LoadBalancer
  #type: NodePort
  ports:
  - port: 80
   #nodePort: 30001
  selector:
    app: micro1
---
apiVersion: v1
kind: Service
metadata:
  name: micro2-svc
  #  namespace: myapp
  labels:
    app: micro2
spec:
  #type: LoadBalancer
  #type: NodePort
  ports:
  - port: 80
   #nodePort: 30002
  selector:
    app: micro2
---
apiVersion: v1
kind: Service
metadata:
  name: micro3-svc
  #  namespace: myapp
  labels:
    app: micro3
spec:
  #type: LoadBalancer
  #type: NodePort
  ports:
  - port: 80
   #nodePort: 30002
  selector:
    app: micro3
